# Hyper-BOT

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tmp_basic_order.py  tmp_basic_ws.py  tmp_example_utils.py  tmp_exchange.py  tmp_hl_sdk_readme.md  tmp_hl_signing.py  tmp_info.py  tmp_sched.py  tmp_tpsl.py
.github/workflows/: ci.yml
configs/: strategy.yaml  strategy_full.yaml
hyper_bot/: __init__.py  backtest.py  config.py  metadata.py  nonce_manager.py  orders.py  rest_client.py  risk.py  signing.py  utils.py  ws_client.py
runs/: trades_20251024.csv
scripts/: backtest_premium_example.py  fetch_snapshot.py  place_ioc_example.py  place_ioc_sdk.py  place_tpsl_example.py  run_ws_paper.py  run_ws_user.py  smoke_test_testnet.py  strategy_runner_full_sdk.py  strategy_runner_sdk.py
tests/: conftest.py  test_metadata.py  test_orders.py  test_rest_client.py  test_trigger_order.py  test_ws_client.py
